fix buttons on mobile maybe

--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@
 
 }
 html {
-  font-family: "Fragment Mono", monospace;
-  font-weight: 400;
-  font-style: normal;
-  text-align: center;
+    font-family: "Fragment Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+    text-align: center;
 }
 .padded {
     padding-left:19vw;
@@ -64,29 +64,31 @@ a:hover {
     color:#2459cc;
 }
 button, input.btn, button.cta-button {
-  font-family: "Fragment Mono", monospace;
-  font-weight: 400;
-  font-style: normal;
-  text-align: center;
-  border-radius: 500px;
-  background-color: #ffffff;
-  transition: transform 0.2s ease;
-  cursor: pointer;
+    font-family: "Fragment Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+    text-align: center;
+    border-radius: 500px;
+    background-color: #ffffff;
+    transition: transform 0.2s ease;
+    cursor: pointer;
+    color: #000000 !important;
+    border-style: solid;
 }
 button:hover, input.btn:hover, button.cta-button:hover {
-  transform: translateY(-5px);
+    transform: translateY(-5px);
 }
 button.cta-button {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  padding: 12px 20px;
-  font-size: 16px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 12px 20px;
+    font-size: 16px;
 }
 button.cta-button img {
-  width: 30px;
-  object-fit: contain;
+    width: 30px;
+    object-fit: contain;
 }
 fieldset {
     border: none;
